[IndexedDBSweeper] Adding & fixing metrics

Bug: 802882
Change-Id: I1b55c22e6743e0b2042f67cd976e504d79a9ea0c
Reviewed-on: https://chromium-review.googlesource.com/868645
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Commit-Queue: Victor Costan <pwnall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531617}
Former-commit-id: b621326679fa3cd90a4a7d493eb4e7354c69ae1a